--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-azure-cognitiveservices-speech==1.36.0
-openai==0.28.0
-pandas==1.3.5
-pytz==2024.1
-requests==2.31.0
+
+fastapi==0.65.1
+uvicorn==0.13.4
+azure-cognitiveservices-speech==1.15.0
+pytz
+openai==0.10.2
